tests/errors/missing_if_block.drast
// # TEST: if statement requires indented block
// # EXPECT: error
// # ERROR_CONTAINS: empty block body

main, int
	if true
	return 0
